objects/CEE_Inquisium_Survey_External_FeedBack__c.object
<CustomObject>
    <fields>
        <fullName>Accelerate_Sales_Cycle_Virtual_Remote__c</fullName>
        <label>% Accelerate Sales Cycle-Virtual/Remote</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Feedback__c</fullName>
        <label>Additional Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Opportunity_Details__c</fullName>
        <label>Additional Opportunity Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attributed_to_Bid_Mgmt_in_Closing__c</fullName>
        <label>Attributed to Bid Mgmt in Closing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributed_to_CPOC_in_Closing_Deal__c</fullName>
        <label>Attributed to CPOC in Closing Deal (%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributed_to_CXC_in_Closing_Deal__c</fullName>
        <label>Attributed to CXC in Closing Deal(%)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_Hours_Saved_Using_CPOC__c</fullName>
        <description>Hours saved by Using CPOC Services</description>
        <label>Average Hours Saved Using CPOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_hours_saved_using_Bid_Mgmt__c</fullName>
        <label>Average hours saved using Bid Mgmt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEC_ID__c</fullName>
        <label>CEC ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEE__c</fullName>
        <description>This field is used to the survey response ID value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>CEE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPOC_Created_Additional_Opportunities__c</fullName>
        <label>CPOC Created Additional Opportunities</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Improvement_Opportunity__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Cisco Improvement Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.s.</description>
        <label>Confidence Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Score__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Content Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience__c</fullName>
        <description>This field is used to the survey response value for OBX and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Customer Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DLP_Order_Managment_Time_Saved_in_Days__c</fullName>
        <label>DLP Order Managment Time Saved(in Days)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Email Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Spend_on_DLP_k_USD__c</fullName>
        <label>Estimated Spend on DLP($k USD)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_and_Last_Name__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>First and Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Saved_using_CXC_vs_First_time_Demo__c</fullName>
        <label>Hours Saved using CXC vs First time Demo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Opportunity__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger..</description>
        <label>Improvement Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Presenter_Feedback__c</fullName>
        <description>This field is used to the survey response value for CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.C.</description>
        <label>Presenter Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Feedback__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Recommendation Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Score__c</fullName>
        <description>This field is used to the survey response value for OBX and CPOC and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Recommendation Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_in_Sales_Cycle_using_Bid_Mgmt__c</fullName>
        <label>Reduction in Sales Cycle using Bid Mgmt</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_in_Sales_Cycle_using_CPOC__c</fullName>
        <label>Reduction in Sales Cycle using CPOC</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reduction_in_sales_cycle__c</fullName>
        <label>Reduction in Sales Cycle</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Satisfaction_level__c</fullName>
        <label>Service Satisfaction Level</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Feedback__c</fullName>
        <description>This field is used to the survey response value for OBX and it is mapping to the same value in CEE Customer feedback object using trigger.</description>
        <label>Speaker Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Your_Role__c</fullName>
        <label>Your Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object is intermediate Inquisium Survey flows first this object, then after insert trigger will push data to customer Feedback object. Using this Approach no need to give view all access to Accounts, CEE objects.</description>
    <label>CEE Inquisium Survey External FeedBack</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>CEE Inquisium Survey External FeedBack N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEE Inquisium Survey External FeedBacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>